Handle delete events with/out tombstones
  Resolves #6

  - Update to debezium 1.0
  - Adjust the EmbeddedEngine class with latest changes in the debezium project.
  - Fix the Consumer<SourceRecord> handler implementation to filter out null SourceRecord. Later are generated on dropTombstones=true.
  - Replace deprecated UnwrapFromEnvelope by ExtractNewRecordState.



* Imporve the Tombstones handling logic. add tests

* Address review remark to get rid of the do while loops

* Add logic to sed KafkaNull only if the spring-kafka is present on the classpath and DBZ tombstones are enabled. If kafka is not present the tombstone messages are ignored.  Add a separate project to test the behavior whit kakfa on the classpath.

* Address open review comments

 - Set the messageKey to headers['cdc_key'] by default.
 - Add support for the operation.header and add.source.fields flattering properties.
 - Add CdcFlatteringIntegrationTest - for testing the flattering and none flattering response representations for different message types.
 - Refactor all integration tests to use ApplicationContextRunner. Later allows to exclude Kafka from the classpath for testing special tombsotne behavior.
 - Replace dot by underscore in header kyes. E.g. cdc_key, cdc_topic, cdc_operation and cdc_offset
 - CdcTombstoneConfiguration addlow to (re)send Tombstone events using KafkaNull payload. Activated only if Kafka is present on the classpath. If not the tombstone events are ignored.

* simplify kafkanull handling